Commit 15 - Changed one block in styling to prevent overflow

--- a/hw-4/home2.css
+++ b/hw-4/home2.css
@@ -101,9 +101,7 @@ label {
     padding: 0;
     margin: 20px 0;
     text-decoration: none;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    word-wrap: break-word;
+    overflow: auto;
 }
 
 .movie-box:hover {
